--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
   #  url: /talks/    
 
   - title: "Professional Experience"
-    url: /teaching/    
+    url: /Professional Experience/    
     
   - title: "Projects Portfolio"
     url: /portfolio/
