Revert "Update navigation.yml"
This reverts commit b2d6c132eed4f6d567e8fbe4ed069d35ab3f6639.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
   #  url: /talks/    
 
   - title: "Professional Experience"
-    url: /Professional Experience/    
+    url: /teaching/    
     
   - title: "Projects Portfolio"
     url: /portfolio/
